quick-start-app/overlays/test/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quick-start
spec:
  replicas: 2
