quick-start-app/overlays/test/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quick-start
  labels:
    app.openshift.io/runtime: quarkus
    app: quick-start
    app-with-metrics: quick-start
    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quick-start
