quick-start-app/overlays/test/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quick-start-route-test
